--- a/settings/dsettings.json
+++ b/settings/dsettings.json
@@ -3,15 +3,15 @@
         "user" : "root",
         "host" : "localhost",
         "port" : 3306,
-        "password" : "",
+        "password" : ""
     },
     "github" : {
         "id" : "",
-        "password" : "",
+        "password" : ""
     },
     "git" : {
         "mail" : "",
         "user" : "",
-        "editor" : "",
+        "editor" : ""
     }
 }
