--- a/df.configs/cred.config.json
+++ b/df.configs/cred.config.json
@@ -1,8 +1,8 @@
 {
-    "istat-menus" : {
-        "config_file" : "iStatMenusSettings.imsp",
+    "istat_menus" : {
+        "config_file" : "iStatMenusSettings.imsp"
     },
-    "github-user-credentials" : {
+    "github_user_credentials" : {
         "github" : {
             "id" : "",
             "password" : ""
@@ -13,15 +13,15 @@
             "editor" : ""
         }
     },
-    "aws-credentials" : {
+    "aws_credentials" : {
         "ID" : "",
         "KEY" : ""
     } ,
-    "known-machines" : {
+    "known_machines" : {
         "ubuntu_vm" : {
             "type" : "aws",
             "user" : "ubuntu",
-            "adress" : "ec2-18-195-8-67",
+            "adress" : "ec2-18-195-65-231",
             "pem_key" : "ubuntu-vm.pem"
         },
         "ial_rpi" : {
@@ -31,7 +31,7 @@
             "pem_key" : ""
         }
     },
-    "known-databases" : {
+    "known_databases" : {
         "mysql" : {
             "_default" : true,
             "user" : "root",
