--- a/df.configs/cred.config.json
+++ b/df.configs/cred.config.json
@@ -18,16 +18,22 @@
         "KEY" : ""
     } ,
     "known_machines" : {
-        "ubuntu_vm" : {
+        "alpha" : {
             "type" : "aws",
             "user" : "ubuntu",
-            "adress" : "ec2-18-194-221-235",
-            "pem_key" : "ubuntu-vm.pem"
+            "adress" : "ec2-35-156-249-211",
+            "pem_key" : "alpha-medaires.pem"
         },
-        "ial_rpi" : {
+        "zeta" : {
+            "type" : "aws",
+            "user" : "ubuntu",
+            "adress" : "ec2-18-195-134-199",
+            "pem_key" : "alpha-medaires.pem"
+        },
+        "rpi" : {
             "type" : "local",
-            "user" : "ial-ah",
-            "adress" : "192.168.1.79",
+            "user" : "ial-vm",
+            "adress" : "192.168.0.17",
             "pem_key" : ""
         }
     },
