--- a/df.configs/df.config.json
+++ b/df.configs/df.config.json
@@ -19,7 +19,7 @@
                 "host" : "localhost",
                 "port" : 3306,
                 "user" : "root",
-                "password" : "",
+                "password" : ""
             }
         }
     }
